--- a/index.html
+++ b/index.html
@@ -50,7 +50,31 @@
             >
           </li>
         </ul>
-      </div>
+        <button
+          type="button"
+          class="contacts-menu"
+          data-menu-button
+          aria-expanded="false"
+          aria-controls="menu-container"
+        >
+          <svg
+            class="contacts-icon"
+            width="40"
+            height="40"
+            aria-label="Переключатель мобильного меню"
+          >
+            <use
+              class="icon-close"
+              href="./images/icon/sprite.svg#icon-close"
+            ></use>
+            <use
+              class="icon-menu"
+              href="./images/icon/sprite.svg#icon-menu"
+            ></use>
+          </svg>
+        </button>
+        <!-- <div class="menu-container" id="menu-container" data-menu>Меню</div>
+      </div> -->
     </header>
     <main>
       <!-- Главная секция-->
@@ -509,5 +533,6 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
