--- a/portfolio.html
+++ b/portfolio.html
@@ -14,38 +14,85 @@
   <body>
     <header class="header-page portfolio">
       <div class="container header-item">
-        <a class="logo-link" href="./index.html"
-          >Web<samp class="logo-header">Studio</samp></a
-        >
-        <nav class="nav-main">
-          <ul class="site-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="./index.html">Студия</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link current" href="./portfolio.html">Портфолио</a>
-            </li>
-            <li class="nav-item"><a class="nav-link" href="#">Контакты</a></li>
-          </ul>
-        </nav>
-        <ul class="contacts-list">
-          <li class="contacts-item">
-            <a class="nav-contacts" href="mailto:info@devstudio.com">
-              <svg class="nav-contacts-envelope">
-                <use href="./images/icon/sprite.svg#icon-envelope"></use>
-              </svg>
-              info@devstudio.com
-            </a>
-          </li>
-          <li class="contacts-item">
-            <a class="nav-contacts" href="tel:380961111111">
-              <svg class="nav-contacts-smartphone">
-                <use href="./images/icon/sprite.svg#icon-smartphone"></use>
-              </svg>
-              +38 096 111 11 11</a
+        <div class="header-nav">
+          <a class="logo-link" href="./index.html"
+            >Web<samp class="logo-header">Studio</samp></a
+          >
+          <button
+            type="button"
+            class="contacts-menu"
+            data-menu-button
+            aria-expanded="false"
+            aria-controls="menu-container"
+          >
+            <svg
+              class="contacts-icon"
+              width="40"
+              height="40"
+              aria-label="Переключатель мобильного меню"
             >
-          </li>
-        </ul>
+              <use
+                class="icon-close"
+                href="./images/icon/sprite.svg#icon-close"
+              ></use>
+              <use
+                class="icon-menu"
+                href="./images/icon/sprite.svg#icon-menu"
+              ></use>
+            </svg>
+          </button>
+          <div class="menu-container" id="menu-container" data-menu>
+            <nav class="nav-main">
+              <ul class="site-nav">
+                <li class="nav-item">
+                  <a class="nav-link" href="./index.html">Студия</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link current" href="./portfolio.html"
+                    >Портфолио</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Контакты</a>
+                </li>
+              </ul>
+              <ul class="contacts-list">
+                <li class="contacts-item">
+                  <a class="nav-contacts" href="mailto:info@devstudio.com">
+                    <svg class="nav-contacts-envelope">
+                      <use href="./images/icon/sprite.svg#icon-envelope"></use>
+                    </svg>
+                    info@devstudio.com
+                  </a>
+                </li>
+                <li class="contacts-item">
+                  <a class="nav-contacts" href="tel:380961111111">
+                    <svg class="nav-contacts-smartphone">
+                      <use
+                        href="./images/icon/sprite.svg#icon-smartphone"
+                      ></use>
+                    </svg>
+                    +38 096 111 11 11</a
+                  >
+                </li>
+              </ul>
+              <ul class="nav-social">
+                <li>
+                  <a class="nav-social-link" href="#">Instagram</a>
+                </li>
+                <li>
+                  <a class="nav-social-link" href="#">Twitter</a>
+                </li>
+                <li>
+                  <a class="nav-social-link" href="#">Facebook</a>
+                </li>
+                <li>
+                  <a class="nav-social-link" href="#">LinkedIn</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
       </div>
     </header>
     <main>
@@ -328,5 +375,6 @@
         </form>
       </div>
     </footer>
+    <script src="./js/menu.js"></script>
   </body>
 </html>
