--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
               <img
                 src="./images/box/box1.jpg"
                 alt="Пример 1"
+                srcset="./images/box/box1@2x.jpg 2x"
                 width="370"
                 height="294"
               />
@@ -154,6 +155,7 @@
               <img
                 src="./images/box/box2.jpg"
                 alt="Пример 2"
+                srcset="./images/box/box2@2x.jpg 2x"
                 width="370"
                 height="294"
               />
@@ -163,6 +165,7 @@
               <img
                 src="./images/box/box3.jpg"
                 alt="Пример 3"
+                srcset="./images/box/box3@2x.jpg 2x"
                 width="370"
                 height="294"
               />
@@ -177,7 +180,11 @@
           <h2 class="team-title">Наша команда</h2>
           <ul class="team-list">
             <li class="team-item">
-              <img src="./images/photo-command/1.jpg" alt="Игорь Демьяненко" />
+              <img
+                src="./images/photo-command/1.jpg"
+                alt="Игорь Демьяненко"
+                srcset="./images/photo-command/1@2x.jpg 2x"
+              />
               <div>
                 <p class="team-name">Игорь Демьяненко</p>
                 <p class="team-position">Product Designer</p>
@@ -214,7 +221,11 @@
               </ul>
             </li>
             <li class="team-item">
-              <img src="./images/photo-command/2.jpg" alt="Ольга Репина" />
+              <img
+                src="./images/photo-command/2.jpg"
+                alt="Ольга Репина"
+                srcset="./images/photo-command/2@2x.jpg 2x"
+              />
               <div>
                 <p class="team-name">Ольга Репина</p>
                 <p class="team-position">Frontend Developer</p>
@@ -251,7 +262,11 @@
               </ul>
             </li>
             <li class="team-item">
-              <img src="./images/photo-command/3.jpg" alt="Николай Тарасов" />
+              <img
+                src="./images/photo-command/3.jpg"
+                alt="Николай Тарасов"
+                srcset="./images/photo-command/3@2x.jpg 2x"
+              />
               <div>
                 <p class="team-name">Николай Тарасов</p>
                 <p class="team-position">Marketing</p>
@@ -288,7 +303,11 @@
               </ul>
             </li>
             <li class="team-item">
-              <img src="./images/photo-command/4.jpg" alt="Михаил Ермаков" />
+              <img
+                src="./images/photo-command/4.jpg"
+                alt="Михаил Ермаков"
+                srcset="./images/photo-command/4@2x.jpg 2x"
+              />
               <div>
                 <p class="team-name">Михаил Ермаков</p>
                 <p class="team-position">UI Designer</p>
