--- a/portfolio.html
+++ b/portfolio.html
@@ -118,7 +118,13 @@
             <li class="work-item">
               <a href="" class="work-item-link">
                 <div class="work-img">
-                  <img src="./images/photo-examples/1.jpg" alt="Технокряк" />
+                  <img
+                    src="./images/photo-examples/1.jpg"
+                    alt="Технокряк"
+                    srcset="./images/photo-examples/1@2x.jpg 2x"
+                    width="370"
+                    height="294"
+                  />
                   <p class="work-secondary">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
@@ -137,6 +143,7 @@
                   <img
                     src="./images/photo-examples/2.jpg"
                     alt="Постер New Orlean vs Golden Star"
+                    srcset="./images/photo-examples/2@2x.jpg 2x"
                     width="370"
                     height="294"
                   />
@@ -158,6 +165,7 @@
                   <img
                     src="./images/photo-examples/3.jpg"
                     alt="Ресторан Seafood"
+                    srcset="./images/photo-examples/3@2x.jpg 2x"
                     width="370"
                     height="294"
                   />
@@ -179,6 +187,7 @@
                   <img
                     src="./images/photo-examples/4.jpg"
                     alt="Проект Prime"
+                    srcset="./images/photo-examples/4@2x.jpg 2x"
                     width="370"
                     height="294"
                   />
@@ -200,6 +209,7 @@
                   <img
                     src="./images/photo-examples/5.jpg"
                     alt="Проект Boxes"
+                    srcset="./images/photo-examples/5@2x.jpg 2x"
                     width="370"
                     height="294"
                   />
@@ -221,6 +231,7 @@
                   <img
                     src="./images/photo-examples/6.jpg"
                     alt="Inspiration has no Borders"
+                    srcset="./images/photo-examples/6@2x.jpg 2x"
                     width="370"
                     height="294"
                   />
@@ -242,6 +253,7 @@
                   <img
                     src="./images/photo-examples/7.jpg"
                     alt="Издание Limited Edition"
+                    srcset="./images/photo-examples/7@2x.jpg 2x"
                     width="370"
                     height="294"
                   />
@@ -263,6 +275,7 @@
                   <img
                     src="./images/photo-examples/8.jpg"
                     alt="Проект LAB"
+                    srcset="./images/photo-examples/8@2x.jpg 2x"
                     width="370"
                     height="294"
                   />
@@ -284,6 +297,7 @@
                   <img
                     src="./images/photo-examples/9.jpg"
                     alt="Growing Business"
+                    srcset="./images/photo-examples/9@2x.jpg 2x"
                     width="370"
                     height="294"
                   />
